compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_modules_from_the_same_package_with_internal_function.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Internal function with correct arity from another module in the same package\n// should be suggested.\n\nimport module\npub fn main() {\n    add(1, 1)\n}"
---
----- SOURCE CODE
-- module.gleam

@internal
pub fn add(x: Int, y: Int) {
    x + y
}

-- main.gleam

// Internal function with correct arity from another module in the same package
// should be suggested.

import module
pub fn main() {
    add(1, 1)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:7:5
  │
7 │     add(1, 1)
  │     ^^^

The name `add` is not in scope here.
Did you mean:

  - module.add
