compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_modules_from_the_same_package_with_internal_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Internal value from another module in the same package should be suggested.\n\nimport module\npub fn main() {\n    one\n}"
---
----- SOURCE CODE
-- module.gleam

@internal
pub const one = 1

-- main.gleam

// Internal value from another module in the same package should be suggested.

import module
pub fn main() {
    one
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:6:5
  │
6 │     one
  │     ^^^

The name `one` is not in scope here.
Did you mean:

  - module.one
