compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_modules_imported_using_an_alias.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Module aliases should be taken into account in the suggestion.\n// Public function with correct arity from another module should be suggested.\n\nimport module as wibble\npub fn main() {\n    add(1, 1)\n}"
---
----- SOURCE CODE
-- module.gleam

pub fn add(x: Int, y: Int) {
    x + y
}

-- main.gleam

// Module aliases should be taken into account in the suggestion.
// Public function with correct arity from another module should be suggested.

import module as wibble
pub fn main() {
    add(1, 1)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:7:5
  │
7 │     add(1, 1)
  │     ^^^

The name `add` is not in scope here.
Did you mean:

  - wibble.add
