compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_variable_suggest_modules_with_multiple_segments.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\n// Module with multiple segments should be taken into account in the suggestion.\n// Public function with correct arity from another module should be suggested.\n\nimport gleam/module\npub fn main() {\n    add(1, 1)\n}"
---
----- SOURCE CODE
-- gleam/module.gleam

pub fn add(x: Int, y: Int) {
    x + y
}

-- main.gleam

// Module with multiple segments should be taken into account in the suggestion.
// Public function with correct arity from another module should be suggested.

import gleam/module
pub fn main() {
    add(1, 1)
}

----- ERROR
error: Unknown variable
  ┌─ /src/one/two.gleam:7:5
  │
7 │     add(1, 1)
  │     ^^^

The name `add` is not in scope here.
Did you mean:

  - module.add
